--- a/package.json
+++ b/package.json
@@ -16,6 +16,12 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@primeuix/themes": "^1.2.5",
+    "chart.js": "^4.5.1",
+    "pinia": "^3.0.4",
+    "primeflex": "^4.0.0",
+    "primeicons": "^7.0.0",
+    "primevue": "^4.4.1",
     "vue": "^3.5.22"
   },
   "devDependencies": {
